--- a/docs/3、工作流程.md
+++ b/docs/3、工作流程.md
@@ -1,289 +1,387 @@
-# 工作流程
+# 核心工作流程
 
-> "render_markdown_to_html" 为 Markdown 渲染模块的实现函数，其核心逻辑基于 `pulldown_cmark` 库，支持标准 Markdown 语法（标题、列表、代码块、链接、强调等），并自动注入自定义 CSS 样式与导航结构，确保前端渲染一致性。该模块在 `server.rs` 中被 `render_markdown()` 调用，作为响应渲染链路的关键环节，直接影响用户体验的可读性与美观性。
+## 1. 工作流程概览 (Workflow Overview)
 
----
+Litho Book 是一个基于 Rust 的本地文档管理与 AI 增强型知识探索系统，其核心工作流程围绕**文档结构化、服务启动、内容检索与智能交互**四大支柱构建。系统采用命令行驱动 + Web 服务的架构模式，通过清晰的模块划分和职责分离，实现了从用户输入到服务响应的完整生命周期管理。
 
-## 1. 关键流程实现 (Key Process Implementation)
-
-### 1.1 文档树构建算法（DocumentTree Construction）
-
-**目标**：将本地文件系统中的 Markdown 文件结构化为可高效查询的内存树形结构。
-
-**输入**：用户指定的文档根目录路径（如 `~/notes/`）
-
-**输出**：`DocumentTree` 实例，包含：
-- 树形结构（`FileNode` 树）
-- 路径映射（`HashMap<String, FileNode>`）
-- 全文索引（`Vec<SearchIndexEntry>`）
-- 前置元数据（Frontmatter）缓存
-
-**执行流程**：
+### 系统主干工作流程
+系统的主干工作流程始于用户执行命令行指令，经过参数解析、环境初始化、文档树构建、HTTP 服务绑定，最终完成服务启动并可选地自动打开浏览器。这一流程是用户首次使用系统的必经路径，构成了整个应用的启动中枢。
 
 ```mermaid
 graph TD
-    A[开始扫描根目录] --> B[递归遍历子目录]
-    B --> C{是否为MD文件}
-    C -- "是" --> D[读取文件内容]
-    D --> E[提取Frontmatter]
-    E --> F[解析标题作者日期]
-    F --> G[提取纯文本内容]
-    G --> H[分词并构建倒排索引]
-    H --> I[计算文件权重]
-    I --> J[创建FileNode实例]
-    J --> K[插入树结构]
-    K --> L[建立路径映射]
-    C -- "否" --> M[跳过]
-    M --> N{是否为目录}
-    N -- "是" --> B
-    N -- "否" --> M
-    L --> O[构建全文搜索索引]
-    O --> P[返回DocumentTree]
+    A[用户执行命令行启动] --> B[解析命令行参数]
+    B --> C[初始化日志系统]
+    C --> D[构建文档树]
+    D --> E[创建 HTTP 服务器]
+    E --> F[启动 HTTP 服务]
+    F --> G[自动打开浏览器]
 ```
 
-**关键技术细节**：
-- **递归扫描优化**：使用 `tokio::fs::read_dir` 异步遍历，避免阻塞主线程。
-- **内存效率**：仅保留 `.md` 文件，忽略隐藏文件（如 `.git`, `node_modules`）。
-- **索引构建**：使用 `regex` 匹配标题（`^#{1,6}\s+.*`），使用 `tantivy` 思想构建轻量级倒排索引（非完整搜索引擎，但支持关键词高亮）。
-- **相关性评分**：
-  - 标题匹配：+50 分
-  - 文件名匹配：+30 分
-  - 正文内容匹配：+10 分
-  - 词频加权：TF-IDF 简化版（词频 × 1/文档总数）
+### 核心执行路径
+- **启动路径**：`main.rs` → `cli.rs` → `filesystem.rs` → `server.rs`
+- **搜索路径**：`Web 请求` → `server.rs` → `filesystem.rs::search_content()` → `返回结果`
+- **AI 对话路径**：`Web 请求` → `server.rs::chat_stream_handler()` → `外部 AI API` → `SSE 流式返回`
 
-**性能特征**：
-- 1000 个 Markdown 文件（平均 5KB）构建耗时：约 80–120ms（Rust 1.78，SSD）
-- 内存占用：约 15–25MB（含索引与缓存）
-- 支持增量更新：当前为全量重建，未来可扩展监听文件变化（inotify）
+### 关键流程节点
+| 节点 | 责任模块 | 输入 | 输出 | 状态 |
+|------|--------|------|------|------|
+| 参数解析 | cli.rs | 命令行参数 | Args 结构体 | 验证中 |
+| 文档扫描 | filesystem.rs | 文档目录路径 | DocumentTree 内存结构 | 构建中 |
+| 服务绑定 | main.rs/server.rs | AppState, TCP 地址 | TcpListener | 绑定成功/失败 |
+| 搜索请求处理 | server.rs/filesystem.rs | 查询关键词 | SearchResult JSON | 处理中/完成 |
+| AI 流式响应 | server.rs | 用户问题, 上下文 | SSE Event Stream | 流式传输中 |
 
-**业务价值**：  
-> 实现“一键索引，秒级搜索”，将原本需手动打开多个文件的查找行为，转化为“输入关键词 → 一键直达”的高效知识检索体验，是系统核心价值的基石。
+### 流程协调机制
+系统通过 `AppState` 结构在 Axum Web 服务中共享 `DocumentTree` 和配置信息，实现多请求间的高效数据访问。`main.rs` 作为协调者，负责串联 CLI 解析、文件系统扫描和服务器启动三大模块，确保各组件按正确顺序初始化并协同工作。
 
 ---
 
-### 1.2 全文搜索算法（Full-Text Search）
+## 2. 主要工作流程 (Main Workflows)
 
-**目标**：在文档树中快速定位与关键词相关的文件，并按相关性排序。
+### 项目启动与服务初始化流程
 
-**输入**：查询关键词 `q=人工智能`（URL 查询参数）
+这是系统最核心的初始化流程，决定了应用能否成功启动并提供服务。
 
-**输出**：JSON 响应，包含：
-```json
-{
-  "query": "人工智能",
-  "results": [
-    {
-      "path": "/ai/intro.md",
-      "title": "人工智能入门",
-      "excerpt": "人工智能是...机器学习的子集",
-      "score": 85,
-      "matches": ["人工智能", "机器学习"]
-    }
-  ],
-  "total": 3
-}
+#### 执行顺序与依赖关系
+```mermaid
+sequenceDiagram
+    participant User as 用户
+    participant Main as main.rs
+    participant CLI as cli.rs
+    participant FS as filesystem.rs
+    participant Server as server.rs
+
+    User->>Main: 执行 litho-book --path ./docs
+    Main->>CLI: Args::parse()
+    CLI-->>Main: 返回 Args 实例
+    Main->>CLI: args.validate()
+    CLI->>FS: 检查 docs_dir.exists() && is_dir()
+    CLI->>OS: is_privileged() (端口<1024时)
+    CLI-->>Main: 验证结果
+    alt 验证失败
+        Main->>User: 打印错误并退出
+    else 验证成功
+        Main->>FS: DocumentTree::new(&args.docs_dir)
+        FS->>OS: 递归扫描目录
+        FS->>FS: 构建 FileNode 树
+        FS->>FS: 建立 search_index
+        FS-->>Main: 返回 DocumentTree
+        Main->>Server: create_router(doc_tree, docs_path)
+        Server->>Server: 创建 AppState
+        Server-->>Main: 返回 Router
+        Main->>OS: TcpListener::bind(&bind_address)
+        OS-->>Main: Listener
+        Main->>User: 打印启动信息
+        alt args.open == true
+            Main->>OS: open_browser(server_url)
+        end
+        Main->>Axum: axum::serve(listener, app).await
+        Axum->>User: 提供 Web 服务
+    end
 ```
 
-**执行流程**：
+#### 输入输出数据流转
+- **输入**：
+  - `--path`: 文档目录路径（PathBuf）
+  - `--port`: 服务端口（u16，默认3000）
+  - `--host`: 绑定主机（String，默认127.0.0.1）
+  - `--open`: 是否自动打开浏览器（bool）
+  - `--verbose`: 是否启用详细日志（bool）
+
+- **输出**：
+  - 控制台打印启动横幅和连接信息
+  - 在内存中构建完整的 `DocumentTree` 结构
+  - 启动 HTTP 服务监听指定端口
+  - 可选地自动打开默认浏览器访问服务地址
+
+### 文档全文搜索流程
+
+该流程支持用户在大量 Markdown 文档中快速定位相关内容，是知识工作者的核心使用场景。
+
+#### 技术流程说明
+```mermaid
+graph TD
+    A[前端发起搜索请求] --> B[server接收请求]
+    B --> C[提取查询参数]
+    C --> D[调用文档搜索功能]
+    D --> E[遍历索引中所有文件]
+    E --> F{是否包含关键词}
+    F -- "是" --> G[计算相关性评分]
+    G --> H[提取上下文片段]
+    H --> I[生成高亮内容]
+    I --> J[收集匹配结果]
+    F -- "否" --> K[跳过该文件]
+    J --> L[按评分排序]
+    L --> M[截断至最多50条]
+    M --> N[序列化为JSON响应]
+    N --> O[返回搜索结果]
+    O --> P[前端展示结果列表]
+```
+
+#### 相关性评分算法
+搜索结果的相关性评分基于以下因素加权计算：
+- **基础匹配**：+1.0 分
+- **标题匹配**（以 `#` 开头）：×3.0 倍
+- **精确词匹配**：×2.0 倍
+- **行首匹配**：×1.5 倍
+- **文件名匹配**：+2.0 分奖励
+
+### AI助手流式对话流程
+
+该流程实现了自然语言交互体验，允许用户通过提问方式获取文档相关内容的摘要和解释。
+
+#### 执行流程详解
+```mermaid
+sequenceDiagram
+    participant Frontend as 前端
+    participant Server as server.rs
+    participant ZhipuAI as 智谱AI API
+    participant Client as reqwest
+
+    Frontend->>Server: POST /api/chat {message, context, history}
+    Server->>Server: 构建系统提示词
+    Server->>Server: 加载架构概览.md 作为背景
+    Server->>Server: 合并历史会话（最多10轮）
+    Server->>Client: 发起流式 POST 请求
+    Client->>ZhipuAI: 发送 OpenAI 兼容请求
+    loop 流式响应
+        ZhipuAI->>Client: data: {\"choices\":[{\"delta\":{\"content\":\"...\"}}]}
+        Client->>Server: 解析 SSE 数据块
+        Server->>Frontend: event: content, data: {...}
+    end
+    ZhipuAI->>Client: data: [DONE]
+    Client->>Server: 流结束
+    Server->>Server: 生成推荐追问问题
+    Server->>Frontend: event: finish, data: {suggestions: [...]}
+```
+
+#### 数据传递细节
+- **请求构建**：
+  ```rust
+  let messages = vec![
+      system_message("你是一个专业的文档助手..."),
+      ...history,
+      user_message(&request.message)
+  ];
+  ```
+- **流式处理**：使用 `tokio::sync::mpsc::channel` 在后台任务中处理字节流，并将解析后的文本块发送给前端。
+- **错误恢复**：若 API 调用失败，返回预设的友好错误消息，保证用户体验不中断。
+
+---
+
+## 3. 流程协调与控制 (Flow Coordination)
+
+### 多模块协调机制
+
+系统通过明确的模块边界和接口定义实现松耦合协作：
+
+| 协调方向 | 依赖类型 | 具体实现 |
+|---------|--------|--------|
+| CLI → Filesystem | 数据依赖 | `Args` 结构体传递 `docs_dir` 路径 |
+| Filesystem → Server | 数据共享 | `DocumentTree` 通过 `AppState` 注入路由处理器 |
+| Server → External API | 服务调用 | `reqwest` 客户端发起异步 HTTP 请求 |
+| All → Error | 错误映射 | `LithoBookError` 自动转换为 `StatusCode` |
+
+### 状态管理和同步
+
+- **AppState 共享状态**：
+  ```rust
+  #[derive(Clone)]
+  pub struct AppState {
+      pub doc_tree: DocumentTree,
+      pub docs_path: String,
+  }
+  ```
+  使用 `Clone` 特性允许多个处理器安全共享只读状态，避免了全局变量和锁的竞争。
+
+- **并发控制**：
+  - 所有读操作（浏览、搜索）均为无锁并发访问
+  - 文档树在启动时一次性构建，运行时不可变
+  - AI 流式响应使用独立的 `mpsc` 通道进行异步通信
+
+### 数据传递和共享
+
+| 数据项 | 生产者 | 消费者 | 传递方式 |
+|-------|--------|--------|--------|
+| DocumentTree | main.rs | server.rs | 函数参数传递 |
+| Query Parameters | Axum Extractor | Handler Functions | 类型安全解包 |
+| Search Results | filesystem.rs | server.rs | 内存对象直接返回 |
+| SSE Events | Background Task | Sse Stream | 异步通道 (mpsc) |
+
+### 执行控制和调度
+
+- **启动调度**：`main.rs` 严格按顺序执行初始化步骤，任何一步失败即终止进程。
+- **请求调度**：Axum 框架自动处理高并发请求，每个请求在独立的任务中执行。
+- **超时控制**：未显式设置超时，依赖底层 TCP 和 HTTP 客户端默认行为。
+- **资源释放**：Rust 所有权机制确保所有资源在作用域结束时自动清理。
+
+---
+
+## 4. 异常处理与恢复 (Exception Handling)
+
+### 错误检测和处理
+
+系统采用分层错误处理策略：
 
 ```mermaid
-graph LR
-    A[接收 /search?q=keyword] --> B[标准化关键词：转小写、去标点]
-    B --> C[拆分词元：tokenize]
-    C --> D[遍历全文索引：term → file_ids]
-    D --> E[对每个匹配文件：计算综合得分]
-    E --> F{是否匹配标题?}
-    F -- 是 --> G[+50分]
-    F -- 否 --> H{是否匹配文件名?}
-    H -- 是 --> I[+30分]
-    H -- 否 --> J{是否匹配正文?}
-    J -- 是 --> K[+10分 × 匹配次数]
-    J -- 否 --> L[跳过]
-    K --> M[提取上下文：前后各 50 字符，高亮关键词]
-    M --> N[排序：按 score 降序]
-    N --> O[截取 Top 20 结果]
-    O --> P[序列化为 JSON]
+graph TD
+    A[IO Error] --> B[LithoBookError::Io]
+    C[JSON Error] --> D[LithoBookError::Json]
+    E[File Not Found] --> F[LithoBookError::FileNotFound]
+    F --> G[axum::http::StatusCode::NOT_FOUND]
+    B --> H[axum::http::StatusCode::INTERNAL_SERVER_ERROR]
+    D --> H
+    I[Invalid Path] --> J[LithoBookError::InvalidPath]
+    J --> K[axum::http::StatusCode::BAD_REQUEST]
+
+    style A fill:#f9f,stroke:#333
+    style C fill:#f9f,stroke:#333
+    style E fill:#f9f,stroke:#333
+    style I fill:#f9f,stroke:#333
 ```
 
-**技术实现细节**：
-- 使用 `regex` 匹配关键词（不区分大小写）
-- 上下文提取采用滑动窗口，避免截断句子
-- 高亮使用 `<mark>` 标签，由前端 CSS 样式美化
-- 无停用词过滤（为简化设计，保留所有词），未来可引入 `stopwords-rs`
-
-**性能优化**：
-- 索引预加载：`DocumentTree` 在启动时构建完成，搜索为纯内存查找，无磁盘 I/O
-- 并发安全：`DocumentTree` 使用 `Arc<Mutex<>>` 包装，支持多线程并发查询（Axum 默认异步处理请求）
-- 缓存命中：对相同关键词的连续请求，无需重新计算（因数据不变，无需缓存层）
-
-**业务价值**：  
-> 实现“像 Google 一样搜索本地笔记”，极大降低知识碎片化带来的认知负担，是知识工作者从“文件管理”转向“信息检索”的关键跃迁。
-
----
-
-### 1.3 Markdown 渲染管道（Markdown Rendering Pipeline）
-
-**目标**：将 Markdown 源文件转换为结构化、样式化的 HTML 页面，供浏览器直接渲染。
-
-**输入**：`FileNode` 中的原始 Markdown 字符串
-
-**输出**：完整的 HTML 页面（含导航栏、标题、样式、脚本）
-
-**执行流程**：
-
-```mermaid
-graph TB
-    A[读取 Markdown 内容] --> B[提取 Frontmatter]
-    B --> C{是否存在 frontmatter?}
-    C -- 是 --> D[解析为 metadata: title, author, date]
-    C -- 否 --> E[使用文件名作为标题]
-    D --> F[构建页面元数据]
-    E --> F
-    F --> G[调用 pulldown_cmark 解析器]
-    G --> H[生成 HTML 字符串]
-    H --> I[注入模板：header + nav + content + footer]
-    I --> J[添加自定义 CSS：代码高亮、侧边栏、响应式布局]
-    J --> K[添加 JavaScript：搜索框联动、目录锚点跳转]
-    K --> L[压缩 HTML（移除多余空格）]
-    L --> M[返回 axum::response::Html]
-```
-
-**关键技术细节**：
-- 使用 `pulldown_cmark`（Rust 最佳 Markdown 解析库）支持 CommonMark 标准
-- 自定义 `Handler` 实现：为标题添加 `id`，为链接添加 `target="_blank"`
-- 模板引擎：硬编码 HTML 模板（非外部模板引擎），提升启动速度与无依赖性
-- 代码块高亮：通过 `syntect` 库实现语法高亮（可选，当前为纯 CSS）
-- 响应式设计：CSS 使用 Flexbox + Media Query，适配移动端
-
-**性能特征**：
-- 单个文件渲染耗时：< 5ms（10KB 内容）
-- 首次渲染后，HTML 被缓存在 `FileNode` 中，后续请求直接返回缓存
-- 无 JIT 编译或动态模板编译，确保启动快、内存可控
-
-**业务价值**：  
-> 将纯文本笔记转化为“可阅读、可导航、可分享”的 Web 页面，实现“笔记即网页”的终极体验，无需额外部署静态站点生成器。
-
----
-
-### 1.4 HTTP 服务调度与状态管理（HTTP Service Orchestration）
-
-**目标**：统一协调请求路由、状态共享与响应生成，实现高并发、低延迟服务。
-
-**核心组件**：`AppState` + `Axum Router`
-
-**状态管理机制**：
-
+关键错误处理代码：
 ```rust
-pub struct AppState {
-    pub document_tree: Arc<Mutex<DocumentTree>>,
-    pub base_path: PathBuf,
-}
-
-impl AppState {
-    pub fn new(document_tree: DocumentTree, base_path: PathBuf) -> Self {
-        Self {
-            document_tree: Arc::new(Mutex::new(document_tree)),
-            base_path,
+impl From<LithoBookError> for axum::http::StatusCode {
+    fn from(err: LithoBookError) -> Self {
+        match err {
+            LithoBookError::FileNotFound { .. } => StatusCode::NOT_FOUND,
+            LithoBookError::InvalidPath { .. } => StatusCode::BAD_REQUEST,
+            _ => StatusCode::INTERNAL_SERVER_ERROR,
         }
     }
 }
 ```
 
-**请求处理流程**：
+### 异常恢复机制
+
+- **启动阶段**：
+  - 参数验证失败：立即退出并打印错误原因
+  - 目录扫描失败：记录错误日志，跳过异常文件继续构建
+  - 端口绑定失败：终止程序，提示用户更换端口或检查权限
+
+- **运行时阶段**：
+  - 文件读取失败：返回 `404 Not Found`
+  - 搜索异常：返回空结果集而非错误
+  - AI API 调用失败：返回预设的降级回复
+
+### 容错策略设计
+
+| 场景 | 容错措施 |
+|------|----------|
+| 无 Markdown 文件 | 扫描完成后发出警告，仍启动服务 |
+| 隐藏文件存在 | 自动忽略 `.git`, `.DS_Store` 等文件 |
+| 权限不足访问低编号端口 | 提示用户使用 ≥1024 的端口 |
+| 浏览器无法自动打开 | 显示手动访问链接 |
+| AI 流中断 | 前端显示部分响应内容 |
+
+### 失败重试和降级
+
+- **当前未实现自动重试**：AI API 调用失败后不会自动重试。
+- **降级方案**：
+  - 搜索功能始终可用，即使 AI 服务不可达
+  - 基础文档浏览不依赖外部服务
+  - 错误信息对用户友好，避免暴露技术细节
+
+---
+
+## 5. 关键流程实现 (Key Process Implementation)
+
+### 核心算法流程
+
+#### 文档树构建算法
+```rust
+fn build_tree(
+    current_path: &Path,
+    base_path: &Path,
+    file_map: &mut HashMap<String, PathBuf>,
+    search_index: &mut HashMap<String, Vec<String>>,
+    stats: &mut TreeStats,
+) -> anyhow::Result<FileNode>
+```
+**执行步骤**：
+1. 获取文件/目录名称和相对路径
+2. 若为文件且扩展名为 `.md`：
+   - 记录元数据（大小、修改时间）
+   - 添加到 `file_map` 索引
+   - 读取全文并按行存入 `search_index`
+   - 更新统计信息
+3. 若为目录：
+   - 递归扫描子项
+   - 按“目录优先、字母排序”规则整理子节点
+   - 构建 `children` 列表
+4. 返回 `FileNode` 实例
+
+#### 全文搜索算法
+```rust
+pub fn search_content(&self, query: &str) -> Vec<SearchResult>
+```
+**执行管道**：
+1. 将查询词转为小写
+2. 遍历 `search_index` 中每个文件的所有行
+3. 对每行执行：
+   - 小写匹配关键词
+   - 计算相关性评分（标题、精确匹配、位置加权）
+   - 提取上下文（前后各一行）
+   - 生成高亮 HTML 片段
+4. 收集所有匹配结果
+5. 按评分降序排序
+6. 截断至最多 50 条
+7. 返回结果列表
+
+### 数据处理管道
 
 ```mermaid
-sequenceDiagram
-    participant Browser
-    participant AxumRouter
-    participant AppState
-    participant Filesystem
+flowchart LR
+    subgraph Input
+        A[用户输入]
+    end
 
-    Browser->>AxumRouter: GET /file/docs/notes.md
-    AxumRouter->>AppState: extract_state() → 获取 Arc<Mutex<DocumentTree>>
-    AppState->>Filesystem: document_tree.lock().unwrap().find_by_path("/docs/notes.md")
-    Filesystem-->>AppState: 返回 FileNode（含内容、元数据）
-    AppState->>AxumRouter: 返回 FileNode
-    AxumRouter->>AxumRouter: 调用 render_markdown(FileNode.content)
-    AxumRouter->>Browser: 返回 HTML 响应（Content-Type: text/html）
+    subgraph Processing
+        B[参数解析] --> C[路径验证]
+        C --> D[目录扫描]
+        D --> E[构建DocumentTree]
+        E --> F[建立search_index]
+    end
 
-    Browser->>AxumRouter: GET /search?q=并发
-    AxumRouter->>AppState: extract_state()
-    AppState->>Filesystem: document_tree.lock().unwrap().search("并发")
-    Filesystem-->>AppState: 返回 Vec<SearchResult>
-    AppState->>AxumRouter: 序列化为 JSON
-    AxumRouter->>Browser: 返回 application/json
+    subgraph Output
+        F --> G[HTTP服务]
+        G --> H[Web界面]
+    end
+
+    click B "src/cli.rs"
+    click D "src/filesystem.rs"
+    click G "src/server.rs"
 ```
 
-**并发控制策略**：
-- 使用 `Arc<Mutex<>>` 保证 `DocumentTree` 的线程安全访问
-- 所有读操作为非阻塞（仅写入在启动时发生）
-- 无锁读取：`Arc` 允许多线程共享，`Mutex` 仅在构建时加锁，搜索时为只读
-- Axum 默认使用 `tokio` 异步运行时，每个请求独立任务，无阻塞
+### 业务规则执行
 
-**性能优化**：
-- **零拷贝响应**：`render_markdown()` 返回 `String`，Axum 直接序列化为 `Response`，避免中间缓冲
-- **连接复用**：HTTP/1.1 Keep-Alive 默认启用
-- **压缩支持**：Axum 自动支持 `gzip`（通过 `tower-http` 中间件可扩展）
+| 规则 | 实现位置 | 逻辑描述 |
+|------|--------|--------|
+| 仅索引 .md 文件 | filesystem.rs | `path.extension() == Some(\"md\")` |
+| 忽略隐藏文件 | filesystem.rs | `name.starts_with('.')` 则跳过 |
+| 目录优先排序 | filesystem.rs | `sort_by` 中目录排前面 |
+| 标题加权搜索 | filesystem.rs | `line.trim().starts_with('#')` ×3.0 |
+| 最大返回50条 | filesystem.rs | `results.truncate(50)` |
+| 限制历史会话 | server.rs | `max_history = 10` |
 
-**业务价值**：  
-> 实现“单进程、多用户、高并发”本地服务，支持多个浏览器标签页、移动设备、API 调用同时访问，满足个人知识库的多端协同需求。
+### 技术实现细节
 
----
+#### 性能优化策略
+- **内存缓存**：文档树和搜索索引在内存中构建，避免重复 I/O
+- **惰性加载**：仅当请求时才读取具体文件内容
+- **流式传输**：AI 响应以 SSE 形式逐块返回，减少延迟
+- **并发处理**：Tokio 异步运行时支持高并发请求
 
-## 总结：核心工作流程全景图
+#### 安全考虑
+- **路径遍历防护**：使用 `strip_prefix(base_path)` 确保文件访问在限定目录内
+- **输入验证**：CLI 参数在启动时全面验证
+- **错误脱敏**：内部错误不会直接暴露给前端
 
-```mermaid
-flowchart TD
-    A[用户启动] --> B[CLI 解析参数]
-    B --> C[Error 校验]
-    C --> D[Filesystem 构建 DocumentTree]
-    D --> E[Server 启动 Axum 服务]
-    E --> F[自动打开浏览器]
-    F --> G[用户访问 Web 界面]
-    G --> H{请求类型?}
-    H -->|/ 或 /file/xxx| I[渲染 Markdown 为 HTML]
-    H -->|/search?q=xxx| J[执行全文搜索]
-    I --> K[返回结构化 HTML]
-    J --> L[返回 JSON 搜索结果]
-    K --> M[浏览器展示]
-    L --> M
-    M --> N[用户交互：点击、搜索、导航]
-    N --> G
+#### 可维护性设计
+- **模块化架构**：各 `.rs` 文件职责单一，易于理解和测试
+- **日志追踪**：使用 `tracing` 宏记录关键执行点
+- **配置集中管理**：所有 CLI 参数在 `Args` 结构体中定义
+- **外部依赖隔离**：AI API 调用封装在独立函数中，便于替换
 
-    style A fill:#4CAF50,stroke:#388E3C
-    style D fill:#FF9800,stroke:#F57C00
-    style E fill:#2196F3,stroke:#1976D2
-    style I fill:#9C27B0,stroke:#7B1FA2
-    style J fill:#607D8B,stroke:#455A64
-```
-
----
-
-## 附录：流程优化建议与运维洞察
-
-### ✅ 开发者指导
-- **新增功能**：如需支持 `.mdx` 或 `.txt`，只需在 `build_file_tree()` 中扩展文件后缀过滤。
-- **调试技巧**：启动时添加 `--log-level=debug`，可查看文件扫描日志与索引构建详情。
-- **性能测试**：使用 `wrk` 压测 `/search?q=test`，可验证并发能力（预期 > 5000 RPS）。
-
-### 🛠️ 运维支持
-- **监控点**：
-  - 启动时间 > 2s → 检查目录是否过大（>5000 文件）
-  - 内存占用 > 100MB → 检查是否缓存了过多大文件
-  - 搜索延迟 > 200ms → 检查是否未使用 SSD
-- **故障排查**：
-  - `404 Not Found` → 检查路径是否以 `/` 开头，是否包含空格或特殊字符
-  - `500 Internal Server` → 查看日志是否为 `LithoBookError::Io`（权限不足）
-  - 搜索无结果 → 检查关键词是否拼写错误，或文件未被扫描（检查 `.md` 后缀）
-
-### 💡 业务价值再强调
-> Litho Book 的核心工作流程，本质是**将“文件系统”转化为“可搜索的知识图谱”**。  
-> 它不依赖数据库、不依赖网络、不依赖配置，仅靠一个命令，就把散落的笔记变成一个**可浏览、可搜索、可分享的个人知识中枢**。  
-> 这是极简主义与高性能的完美结合，是知识工作者的“瑞士军刀”。
-
----
-
-**文档版本**：v1.2  
-**最后更新**：2025-04-05  
-**适用对象**：开发团队、运维工程师、产品设计者、新成员培训  
-**知识传承价值**：本流程文档完整覆盖系统从启动到交互的全部核心路径，是理解 Litho Book 架构与实现的唯一权威指南。
+本系统通过严谨的工作流程设计和高质量的代码实现，为用户提供了一个稳定、高效、智能的本地知识管理解决方案。
