--- a/docs/2、架构概览.md
+++ b/docs/2、架构概览.md
@@ -3,505 +3,456 @@
 ## 1. 架构概览 (Architecture Overview)
 
 ### 架构设计理念
+Litho Book 是一个面向本地知识管理的全栈应用，其核心设计遵循**职责分离原则**（Separation of Concerns）和**高内聚低耦合**的设计哲学。系统通过清晰的模块划分，将用户交互、数据处理与系统支撑能力解耦，确保各组件专注于单一职责。
 
-Litho Book 的架构设计遵循 **“极简主义工具化”** 哲学，以“**本地知识库的零配置、离线、快速访问**”为核心目标，拒绝复杂性，拥抱轻量化。系统不依赖数据库、不支持网络同步、不引入用户认证，完全将**本地文件系统作为唯一数据源与持久化层**，通过内存构建文档树实现亚毫秒级响应，完美契合开发者与知识工作者对“开箱即用”的工具型产品期待。
-
-其核心理念可概括为：
-
-- **无状态、无持久化**：所有状态仅存在于内存中，重启即重建，降低复杂度，提升可预测性。
-- **单体即全部**：不拆分微服务，不引入中间件，单一二进制完成扫描、索引、服务、渲染全流程。
-- **Rust 原生优势最大化**：利用 Rust 的内存安全、零成本抽象与异步并发能力，构建高性能、低延迟、高可靠的服务。
-- **错误即体验**：将底层错误（IO、序列化）统一抽象为业务级错误，确保用户看到的是清晰、可操作的提示，而非技术堆栈异常。
+该系统采用 **"命令行启动 + Web 服务"** 的混合架构模式，既保留了开发者熟悉的 CLI 配置方式，又提供了现代化的 Web 浏览体验。整体架构强调：
+- **类型安全**：基于 Rust 的强类型系统，减少运行时错误
+- **零成本抽象**：利用 Rust 的异步运行时 Tokio 实现高性能 I/O 操作
+- **内存安全**：无需垃圾回收器即可防止空指针、缓冲区溢出等常见漏洞
+- **可维护性**：模块化设计便于未来功能扩展与重构
 
 ### 核心架构模式
+系统采用典型的**分层架构**（Layered Architecture），分为三个核心领域：
+1. **用户交互域**：处理 CLI 参数解析与 HTTP 请求响应
+2. **文档数据域**：负责文件扫描、内容索引与搜索逻辑
+3. **系统支撑域**：提供日志、错误处理等基础设施能力
 
-Litho Book 采用 **“单体架构 + 内存驱动 + 命令-查询职责分离（CQRS）”** 的混合模式：
-
-| 模式 | 应用说明 |
-|------|----------|
-| **单体架构（Monolithic）** | 所有功能模块（CLI、FS、HTTP、Error）打包为单一可执行文件，无进程间通信，部署简单，启动快速，适合嵌入式知识管理场景。 |
-| **内存驱动架构（In-Memory Driven）** | 文档树（DocumentTree）全量加载至内存，避免磁盘IO延迟，实现搜索与导航的即时响应。牺牲内存换取性能，适用于中小型知识库（<10GB）。 |
-| **CQRS（Command-Query Responsibility Segregation）** | 虽未显式分离，但隐式体现：**启动流程**（Command）负责构建文档树；**浏览/搜索流程**（Query）仅读取已构建的树结构，无写入操作，天然符合 CQRS 原则。 |
-| **管道-过滤器（Pipe-Filter）** | 数据流呈线性管道：CLI → FS（过滤并构建）→ HTTP（过滤并渲染）→ 用户，每个模块仅处理其职责内的数据转换。 |
+同时，在 Web 层采用了 **Axum 框架的函数式路由+状态注入**模式，通过 `AppState` 将共享资源（如 `DocumentTree`）安全地传递给所有请求处理器。
 
 ### 技术栈概述
+| 类别 | 技术 | 说明 |
+|------|------|------|
+| **Web 框架** | Axum | 基于 Tokio 的高性能 Rust Web 框架，支持异步处理 |
+| **异步运行时** | Tokio | 提供异步任务调度与 I/O 多路复用 |
+| **CLI 解析** | Clap | 强大的命令行参数解析库，支持自动生成帮助信息 |
+| **错误处理** | Anyhow + ThisError | 统一的应用级错误处理方案 |
+| **日志系统** | Tracing + Subscriber | 结构化日志记录，支持不同级别输出 |
+| **JSON 序列化** | Serde | 高性能的数据序列化/反序列化框架 |
+| **HTTP 客户端** | Reqwest | 支持流式响应的异步 HTTP 客户端 |
+| **Markdown 渲染** | Pulldown-Cmark | 安全高效的 Markdown 到 HTML 转换器 |
+| **时间处理** | Chrono | 日期时间操作库，支持序列化 |
 
-| 层级 | 技术选型 | 作用 | 选型理由 |
-|------|----------|------|----------|
-| **语言** | Rust 1.70+ | 核心实现语言 | 内存安全、零成本抽象、高并发、编译期检查，杜绝空指针、数据竞争，适合系统级工具开发 |
-| **异步运行时** | tokio | 异步任务调度 | 高性能异步 I/O，支持 HTTP 服务高并发处理，与 axum 深度集成 |
-| **Web 框架** | axum | HTTP 服务核心 | 基于 tower 的中间件生态，类型安全路由，与 serde、tokio 无缝协作，轻量高效 |
-| **命令行解析** | clap | 参数解析 | 支持子命令、默认值、自动帮助、类型校验，代码声明式，减少样板 |
-| **序列化** | serde | 结构体 ↔ JSON | 用于文档树序列化（调试）、响应体（JSON API）、错误序列化，通用性强 |
-| **错误管理** | thiserror + anyhow | 统一错误类型 | `thiserror` 定义业务错误枚举，`anyhow` 简化底层错误包装，实现错误链与上下文传递 |
-| **日志追踪** | tracing | 结构化日志 | 支持 span、event、层级日志，便于调试启动流程与请求链路 |
-| **模板渲染** | serde_json | Markdown → HTML | 用于注入 HTML 模板，非模板引擎，轻量可控，避免复杂依赖 |
-| **HTTP 中间件** | tower_http | CORS、压缩、日志 | 提供开箱即用的中间件，增强服务健壮性与兼容性 |
-| **构建工具** | Cargo | 依赖管理与编译 | Rust 生态标准，支持跨平台构建与发布 |
+```mermaid
+graph TD
+    subgraph "外部系统"
+        ZhipuAI[智谱AI OpenAI兼容API]
+    end
 
-> ✅ **技术选型洞察**：所有依赖均为 Rust 生态中最成熟、最轻量、最安全的库，无任何“重量级”框架（如 Actix、Rocket），避免过度工程化，符合“工具化”定位。
+    subgraph "用户交互域"
+        CLI[命令行参数解析]
+        Server[Axum Web服务]
+    end
+
+    subgraph "文档数据域"
+        FS[文档树构建 全文搜索 Markdown渲染]
+    end
+
+    subgraph "系统支撑域"
+        Main[主程序协调]
+        Error[统一错误处理]
+    end
+
+    Main -->|"调用"| CLI
+    Main -->|"调用"| FS
+    Main -->|"创建"| Server
+    Main -->|"注入状态"| Server
+
+    CLI -->|"提供配置"| Main
+    FS -->|"返回DocumentTree"| Main
+    FS -->|"可能抛出IO JSON错误"| Error
+
+    Server -->|"依赖"| FS
+    Server -->|"使用"| Error
+    Server -->|"发起请求"| ZhipuAI
+
+    CLI -->|"被调用"| Main
+    Error -->|"实现From<T> for StatusCode"| Server
+
+    style CLI fill:#e1f5fe,stroke:#039be5
+    style Server fill:#e1f5fe,stroke:#039be5
+    style FS fill:#f0f4c3,stroke:#afb42b
+    style Main fill:#ffecb3,stroke:#ffb300
+    style Error fill:#ffecb3,stroke:#ffb300
+    style ZhipuAI fill:#f3e5f5,stroke:#8e24aa
+```
 
 ---
 
 ## 2. 系统上下文 (System Context)
 
 ### 系统定位与价值
+Litho Book 是一个本地知识增强系统，旨在解决个人知识碎片化问题。它将分散在本地的 Markdown 文档转化为结构化、可搜索的知识库，并集成 AI 助手功能，显著提升知识工作者的信息检索效率与创作体验。
 
-Litho Book 是一款**面向个人知识管理的本地 Markdown 文档搜索引擎与阅读器**，其核心价值在于：
-
-> **将杂乱的本地 Markdown 文件夹，转化为一个无需配置、一键启动、即时响应的 Web 知识库，实现“所想即所见”的高效知识检索体验。**
-
-它解决了知识工作者在管理技术文档、读书笔记、项目手册时面临的三大痛点：
-- **查找难**：在数百个 `.md` 文件中手动搜索关键词效率低下；
-- **导航乱**：缺乏树形结构，无法直观看到文档层级关系；
-- **部署重**：传统方案（如 Obsidian、Logseq、Docusaurus）需安装、配置、同步，违背“轻量”初衷。
-
-Litho Book 以“**单二进制 + 命令行启动**”的极简交付方式，实现“**开箱即用，离线可用，零依赖**”的终极体验。
+**核心业务价值**：
+- ✅ **离线可用**：所有文档保留在本地，无需上传云端
+- ✅ **快速访问**：一键启动 Web 服务，即时浏览文档目录
+- ✅ **智能搜索**：支持全文关键词匹配与相关性排序
+- ✅ **AI 辅助**：通过自然语言问答获取文档相关内容解释
+- ✅ **轻量高效**：单二进制文件部署，无复杂依赖
 
 ### 用户角色与场景
-
-| 用户角色 | 描述 | 使用场景 | 核心需求 |
-|----------|------|----------|----------|
-| **开发者** | 编写技术文档、API 手册、项目 README 的工程师 | 在本地 `docs/` 目录中管理项目文档，需快速查阅函数说明、配置项 | 快速全文搜索、结构化导航、离线访问、无网络依赖 |
-| **知识工作者** | 管理个人笔记、读书摘录、研究资料的非技术用户 | 使用 Obsidian 或 Typora 生成 `.md` 文件，希望快速浏览 | 树形目录展示、Markdown 渲染、简单启动、跨平台运行 |
-
-> 📌 **用户共性**：均追求“**低认知负荷**”——不希望学习复杂系统，不希望等待启动，不希望配置服务器。
+| 角色 | 典型使用场景 |
+|------|-------------|
+| **开发者** | - 快速查阅技术文档/API 注释<br>- 在浏览器中结构化展示代码笔记<br>- 使用 AI 助手理解复杂架构设计 |
+| **知识工作者** | - 整理读书笔记与研究资料<br>- 基于关键词快速定位历史记录<br>- 通过对话形式回顾知识点 |
 
 ### 外部系统交互
+| 外部系统 | 交互方式 | 用途 |
+|--------|---------|------|
+| **智谱AI OpenAI兼容API** | HTTP/REST + SSE | 获取流式 AI 回答，用于文档问答功能 |
 
-Litho Book **无任何外部系统依赖**，其设计边界严格排除：
-
-- ❌ 用户认证系统（OAuth、JWT）
-- ❌ 数据库（SQLite、PostgreSQL、Redis）
-- ❌ 远程同步（Git、Dropbox、OneDrive）
-- ❌ Markdown 编辑器（不支持写入）
-- ❌ 插件系统或扩展机制
-- ❌ 外部 API（如 Google Search、Elasticsearch）
-- ❌ 多用户协作或权限控制
-
-> ✅ **唯一“外部系统”是用户本地文件系统** —— 它是数据的唯一来源与唯一存储。
+> ⚠️ **安全提醒**：当前 API 密钥硬编码在源码中（`b0c0afc3b5d0402db47e5132fc0fa882.6vyDm2pOv2NSy5z7`），存在泄露风险，建议改用环境变量注入。
 
 ### 系统边界定义
+#### 包含组件
+- 命令行参数解析 (`cli.rs`)
+- 文件系统扫描与文档树构建 (`filesystem.rs`)
+- 统一错误处理机制 (`error.rs`)
+- Axum HTTP 服务端 (`server.rs`)
+- 主程序入口协调 (`main.rs`)
 
-| 包含范围 | 排除范围 |
-|----------|----------|
-| ✅ 命令行参数解析（`cli.rs`） | ❌ 用户登录与权限管理 |
-| ✅ 递归扫描 `.md` 文件（`filesystem.rs`） | ❌ 远程同步或云存储集成 |
-| ✅ 构建内存文档树与全文索引 | ❌ Markdown 编辑器功能 |
-| ✅ HTTP 服务与路由分发（`server.rs`） | ❌ 多用户协作或版本历史 |
-| ✅ Markdown → HTML 渲染 | ❌ 插件或扩展机制 |
-| ✅ 全文搜索（文件名、标题、内容） | ❌ 外部 API 调用（如 AI 摘要） |
-| ✅ 自动打开浏览器 | ❌ Web 界面自定义主题或插件 |
-| ✅ 统一错误处理与日志 | ❌ 数据库持久化或缓存机制 |
+#### 排除组件
+- 前端 React/Vue 界面（HTML 模板为静态嵌入）
+- Markdown 文件生成工具
+- 文档版本控制（如 Git）
+- 用户认证与权限系统
+- 云存储同步服务
+- AI 模型训练或微调
 
-> 🔒 **边界意义**：通过严格限制功能范围，Litho Book 避免了“功能蔓延”，确保其作为“**知识管理的瑞士军刀**”而非“**全能笔记平台**”的定位清晰，实现极致的**专注性与可靠性**。
+```mermaid
+graph LR
+    User((用户))
+
+    subgraph "Litho Book 系统"
+        CLI[命令行接口]
+        Web[Web 服务]
+        DocEngine[文档引擎]
+        AI[AI 助手]
+    end
+
+    External[ZhipuAI API]
+
+    User -- "启动应用" --> CLI
+    User -- "浏览/搜索/提问" --> Web
+    Web -- "获取回答" --> AI
+    AI -- "调用API" --> External
+    DocEngine -- "提供内容" --> Web
+
+    style User fill:#f9f,stroke:#333
+    style External fill:#f3e5f5,stroke:#8e24aa
+    classDef system fill:#bbdefb,stroke:#1976d2;
+    class CLI,Web,DocEngine,AI system
+```
 
 ---
 
 ## 3. 容器视图 (Container View)
 
 ### 领域模块划分
+Litho Book 的容器层级由四个主要组件构成：
 
-Litho Book 的容器层由 **4 个核心模块** 构成，均为同一进程内的逻辑模块（非独立进程），通过内存共享数据，无网络通信。
-
-| 容器 | 类型 | 语言 | 职责 | 启动顺序 |
-|------|------|------|------|----------|
-| **主程序协调器** | 主入口容器 | Rust | 调度各模块初始化，协调启动流程 | 1 |
-| **命令行解析域** | 工具支撑域 | Rust | 解析用户输入，验证参数合法性 | 2 |
-| **文件系统域** | 核心业务域 | Rust | 递归扫描、构建文档树、全文索引 | 3 |
-| **HTTP服务域** | 核心业务域 | Rust | 提供 REST API，响应 Web 请求，渲染内容 | 4 |
-| **错误处理域** | 基础设施域 | Rust | 统一错误枚举、转换、日志映射 | 2（并行） |
-
-> 📌 **关键洞察**：所有“容器”均为**单进程内的逻辑模块**，无网络边界，无序列化开销，数据通过 `Arc<DocumentTree>` 在模块间共享，实现零拷贝传递。
+| 容器 | 技术实现 | 职责 |
+|------|----------|------|
+| **CLI 接口** | `cli.rs` + Clap | 解析命令行参数，验证输入合法性 |
+| **Web 服务** | `server.rs` + Axum | 提供 RESTful API 与 SSE 流式响应 |
+| **文档引擎** | `filesystem.rs` | 扫描目录、构建树形结构、执行搜索 |
+| **主程序** | `main.rs` | 协调各模块，控制应用生命周期 |
 
 ### 领域模块架构
+#### 用户交互域
+- **命令行接口**
+  - 解析 `--path`, `--port`, `--host`, `--open`, `--verbose`
+  - 验证文档路径存在性及权限（低端口需管理员权限）
+  - 提供跨平台浏览器自动打开支持
+- **Web 服务接口**
+  - 实现以下关键路由：
+    - `GET /` → 返回首页 HTML
+    - `GET /api/tree` → 获取文档树结构
+    - `GET /api/file?file=xxx.md` → 获取文件内容与 HTML 渲染结果
+    - `GET /api/search?q=关键词` → 执行全文搜索
+    - `GET /api/stats` → 获取文档统计信息
+    - `POST /api/chat` → 流式 AI 对话（SSE）
 
-```mermaid
-graph TD
-    %% ==================== 容器视图：Litho Book ====================
-    subgraph "用户层"
-        U[用户] -->|启动命令| CLI[命令行解析域]
-        U -->|浏览器访问| HTTP[HTTP服务域]
-    end
+#### 文档数据域
+- **文档树构建器**
+  - 递归扫描指定目录，构建内存中的 `DocumentTree`
+  - 忽略隐藏文件（`.` 开头）和非 `.md` 文件
+  - 维护 `FileNode` 树形结构，包含路径、大小、修改时间等元数据
+  - 建立 `file_map` 映射（相对路径 → 实际路径）用于快速查找
+- **全文搜索引擎**
+  - 在 `search_index` 中缓存每个文件的所有行文本
+  - 支持关键词匹配，结合多种因素计算相关性评分：
+    - 标题权重（H1/H2 加权 ×3）
+    - 精确词匹配（×2）
+    - 行首匹配（×1.5）
+    - 文件名匹配（+2 分）
+  - 返回带 `<mark>` 高亮标签的结果片段与上下文
+- **Markdown 渲染器**
+  - 使用 `pulldown-cmark` 将 Markdown 转换为 HTML
+  - 支持表格、脚注、删除线、任务列表等扩展语法
 
-    subgraph "主程序协调器"
-        MAIN[main.rs]
-    end
-
-    subgraph "核心业务域"
-        FS[文件系统域]
-        HTTP[HTTP服务域]
-    end
-
-    subgraph "基础设施域"
-        ERR[错误处理域]
-    end
-
-    subgraph "外部依赖（Rust生态）"
-        AXUM[axum]
-        TOKIO[tokio]
-        CLAP[clap]
-        SERDE[serde]
-        TRACING[tracing]
-        TOWER_HTTP[tower_http]
-        THISERROR[thiserror]
-        ANYHOW[anyhow]
-        SERDE_JSON[serde_json]
-    end
-
-    %% ==================== 依赖关系 ====================
-    MAIN --> CLI
-    MAIN --> FS
-    MAIN --> HTTP
-    MAIN --> ERR
-
-    CLI -->|传递路径| FS
-    CLI -->|错误上报| ERR
-
-    FS -->|提供 DocumentTree| HTTP
-    FS -->|使用| SERDE
-    FS -->|使用| TRACING
-
-    HTTP -->|查询| FS
-    HTTP -->|错误转换| ERR
-    HTTP -->|使用| AXUM
-    HTTP -->|使用| TOWER_HTTP
-    HTTP -->|使用| SERDE
-    HTTP -->|使用| TRACING
-    HTTP -->|渲染模板| SERDE_JSON
-
-    ERR -->|定义| THISERROR
-    ERR -->|转换| SERDE_JSON
-    ERR -->|包装| ANYHOW
-
-    CLI --> CLAP
-    CLI --> ANYHOW
-    MAIN --> TOKIO
-    MAIN --> AXUM
-    MAIN --> ANYHOW
-    FS --> SERDE
-    FS --> TRACING
-    HTTP --> AXUM
-    HTTP --> TOWER_HTTP
-    HTTP --> SERDE
-    HTTP --> TRACING
-    ERR --> THISERROR
-    ERR --> SERDE_JSON
-
-    %% ==================== 样式定义 ====================
-    style CLI fill:#f9f,stroke:#333
-    style FS fill:#bbf,stroke:#333
-    style HTTP fill:#bfb,stroke:#333
-    style ERR fill:#fbb,stroke:#333
-    style MAIN fill:#ddd,stroke:#333
-
-    classDef coreBusiness fill:#bbf,stroke:#333;
-    classDef infrastructure fill:#fbb,stroke:#333;
-    classDef tooling fill:#f9f,stroke:#333;
-    classDef external fill:#eee,stroke:#666;
-
-    class CLI tooling
-    class FS,HTTP coreBusiness
-    class ERR infrastructure
-    class MAIN tooling
-    class AXUM,TOKIO,CLAP,SERDE,TRACING,TOWER_HTTP,THISERROR,ANYHOW,SERDE_JSON external
-```
+#### 系统支撑域
+- **错误处理中枢 (`error.rs`)**
+  - 定义统一的 `LithoBookError` 枚举类型
+  - 自动映射至 HTTP 状态码（如 `FileNotFound → 404`）
+  - 支持从 `std::io::Error`, `serde_json::Error` 等标准错误自动转换
+- **程序启动协调 (`main.rs`)**
+  - 主入口函数，负责整个生命周期调度
+  - 执行流程：
+    1. 解析 CLI 参数
+    2. 初始化日志系统（Tracing）
+    3. 打印启动横幅
+    4. 验证参数合法性
+    5. 构建 `DocumentTree`
+    6. 创建 Axum 路由器并绑定状态
+    7. 启动 TCP 监听
+    8. 可选：自动打开浏览器
 
 ### 存储设计
+本系统采用**内存驻留型存储架构**，不依赖外部数据库：
 
-| 存储类型 | 实现方式 | 特点 | 优劣分析 |
-|----------|----------|------|----------|
-| **主存储** | 本地文件系统（`.md` 文件） | 唯一持久化层 | ✅ 无需配置、跨平台、天然版本控制（Git）<br>❌ 重启需重建索引，大文件夹启动慢 |
-| **缓存层** | **内存中的 DocumentTree** | 全量加载，Rust 结构体 | ✅ 搜索响应 <1ms，无磁盘IO<br>❌ 内存占用随文档数量线性增长（约 1000 文件 ≈ 50MB） |
-| **索引层** | 内存倒排索引（关键词 → 文件ID） | 基于 `HashMap<String, Vec<FileId>>` | ✅ 支持模糊匹配、关键词高亮<br>❌ 无持久化，重启重建，无词频统计 |
-| **无其他存储** | 无 SQLite、无 Redis、无文件缓存 | 设计决策 | ✅ 极简、无迁移成本、无兼容性问题 |
+| 数据类型 | 存储位置 | 生命周期 |
+|---------|--------|----------|
+| 文档树结构 | 内存 (`DocumentTree`) | 应用运行期间 |
+| 文件内容索引 | 内存 (`HashMap<String, Vec<String>>`) | 应用运行期间 |
+| 文件路径映射 | 内存 (`HashMap<String, PathBuf>`) | 应用运行期间 |
+| 静态模板 | 编译时嵌入二进制 | 编译期固化 |
 
-> 💡 **设计权衡**：选择“**内存索引 + 启动重建**”而非“**持久化索引**”，是为避免：
-> - 索引文件损坏风险
-> - 版本不一致问题（文件更新但索引未重建）
-> - 多平台二进制兼容性问题
-> - 增加部署复杂度
+> 💡 **优势**：避免磁盘 I/O 开销，提升搜索性能
+> 🔧 **改进建议**：增加热重载功能，在文件变更时重建索引
 
 ### 领域模块间通信
-
-| 模块对 | 通信方式 | 数据格式 | 协议 | 频率 |
-|--------|----------|----------|------|------|
-| CLI → FS | 函数调用 | `PathBuf` | 同步 | 1次（启动） |
-| FS → HTTP | 内存引用 | `Arc<DocumentTree>` | 同步 | 持续（所有请求） |
-| HTTP → FS | 函数调用 | `&DocumentTree` | 同步 | 高频（每次请求） |
-| HTTP → ERR | 错误返回 | `LithoBookError` | 同步 | 中频（异常路径） |
-| CLI → ERR | 错误构造 | `LithoBookError` | 同步 | 低频（参数错误） |
-| ERR → 日志 | `tracing::error!` | 结构化日志 | 同步 | 中频 |
-
-> ✅ **通信特点**：
-> - **无序列化**：`Arc<DocumentTree>` 在模块间共享，避免拷贝。
-> - **无异步通信**：所有调用为同步阻塞，因无网络、无IO瓶颈，无需复杂异步协调。
-> - **无消息队列**：系统为单线程启动 + 异步HTTP服务，无事件驱动需求。
+| 依赖方向 | 类型 | 描述 |
+|--------|------|------|
+| `main.rs` → `cli.rs` | 服务调用 | 主程序调用 CLI 模块解析命令行参数 |
+| `main.rs` → `filesystem.rs` | 数据依赖 | 构建文档树并注入 AppState |
+| `main.rs` → `server.rs` | 服务调用 | 创建路由器并启动服务 |
+| `server.rs` → `filesystem.rs` | 数据依赖 | 访问 DocumentTree 进行搜索、读取文件 |
+| `server.rs` → `error.rs` | 服务调用 | 错误自动转换为 HTTP 状态码 |
+| `filesystem.rs` → `error.rs` | 数据依赖 | IO/序列化错误包装为 LithoBookError |
+| `server.rs` → `reqwest` → `ZhipuAI` | 外部服务调用 | 流式调用 AI 接口获取回答 |
 
 ---
 
 ## 4. 组件视图 (Component View)
 
 ### 核心功能组件
+#### `DocumentTree` 组件
+```rust
+pub struct DocumentTree {
+    pub root: FileNode,
+    pub file_map: HashMap<String, PathBuf>,
+    pub stats: TreeStats,
+    pub search_index: HashMap<String, Vec<String>>,
+}
+```
+- **职责**：内存中表示整个文档目录的树形结构
+- **关键方法**：
+  - `new(docs_dir)`：递归扫描目录构建树
+  - `get_file_content()`：根据路径读取文件内容
+  - `render_markdown()`：将 Markdown 转为 HTML
+  - `search_content(query)`：执行全文搜索并排序
 
-#### 1. 文件系统域（`filesystem.rs`）
-
-| 组件 | 职责 | 关键实现 |
-|------|------|----------|
-| **DocumentTree** | 核心数据结构，表示整个文档树 | `struct DocumentTree { root: FileNode, index: HashMap<String, Vec<FileId>>, files: HashMap<FileId, FileInfo> }` |
-| **FileNode** | 树节点，表示目录或文件 | `struct FileNode { name: String, children: Vec<FileNode>, file_id: Option<FileId> }` |
-| **DocumentTree::from_path()** | 递归扫描目录，构建树 | 使用 `walkdir` 遍历，过滤 `.md`，提取 frontmatter（标题、作者） |
-| **DocumentTree::search()** | 全文搜索 | 对文件名、标题、内容进行模糊匹配，使用 `regex` + `str::contains()`，计算相关性评分（关键词出现频次 + 位置权重） |
-| **render_markdown_to_html()** | Markdown 渲染 | 使用 `pulldown_cmark` 库，转换为 HTML，支持代码高亮、链接、列表 |
-| **extract_frontmatter()** | 提取 YAML 元数据 | 正则匹配 `---\n.*?\n---`，使用 `serde_yaml` 解析为 `Frontmatter` 结构 |
-
-#### 2. HTTP服务域（`server.rs`）
-
-| 组件 | 职责 | 关键实现 |
-|------|------|----------|
-| **AppState** | 共享上下文 | `struct AppState { tree: Arc<DocumentTree> }`，通过 `axum::extract::State` 注入 |
-| **create_router()** | 路由注册 | 使用 `axum::Router::new().route("/", get(root)).route("/search", get(search))` |
-| **routes::root()** | 首页路由 | 返回树形结构的 HTML 页面，使用 `inject_template()` 注入 JSON 树 |
-| **routes::search()** | 搜索路由 | 接收 `q=keyword`，调用 `tree.search()`，返回 JSON 数组 `{ id, path, title, snippets }` |
-| **routes::get_file()** | 文件查看路由 | 根据路径 `/file/docs/intro.md`，读取文件内容，渲染为 HTML |
-| **render_markdown()** | Markdown 渲染器 | 调用 `render_markdown_to_html()`，注入标准 HTML 模板（含 CSS、JS） |
-| **format_bytes()** | 文件大小格式化 | 将字节数转为 `1.2 MB`、`892 KB` 等人类可读格式 |
-
-#### 3. 错误处理域（`error.rs`）
-
-| 组件 | 职责 | 关键实现 |
-|------|------|----------|
-| **LithoBookError** | 统一错误枚举 | `#[derive(thiserror::Error)] enum LithoBookError { Io(Error), Json(Error), InvalidPath, PortInUse, ... }` |
-| **From<LithoBookError> for StatusCode** | 错误转 HTTP 状态码 | `impl From<LithoBookError> for StatusCode { fn from(err: LithoBookError) -> Self { match err { ... } } }` |
-| **Result<T>** | 通用返回类型 | `type Result<T> = std::result::Result<T, LithoBookError>`，全项目统一 |
+#### `AppState` 组件
+```rust
+pub struct AppState {
+    pub doc_tree: DocumentTree,
+    pub docs_path: String,
+}
+```
+- **职责**：作为 Axum 应用的共享状态，贯穿所有请求处理器
+- **注入方式**：通过 `.with_state(state)` 注入到 Router
 
 ### 技术支撑组件
+#### `LithoBookError` 组件
+```rust
+#[derive(Error, Debug)]
+pub enum LithoBookError {
+    Io(#[from] std::io::Error),
+    Json(#[from] serde_json::Error),
+    FileNotFound { path: String },
+    InvalidPath { path: String },
+    DirectoryScan(String),
+    Server(String),
+    Config(String),
+}
+```
+- **职责**：统一应用级错误处理
+- **特性**：实现 `From<LithoBookError> for StatusCode`，自动映射为 HTTP 状态码
 
-| 组件 | 作用 | 技术实现 |
-|------|------|----------|
-| **tracing::subscriber::set_global_default** | 全局日志订阅 | 初始化 `tracing_subscriber::fmt::Subscriber`，输出到 stderr |
-| **tokio::runtime::Builder** | 异步运行时配置 | 使用默认单线程运行时，因 HTTP 服务为 I/O 密集，无需多线程 CPU 并行 |
-| **axum::Server::bind** | HTTP 服务绑定 | 绑定 `SocketAddr`，使用 `tokio::net::TcpListener`，支持 IPv4/IPv6 |
-| **tower_http::services::ServeDir** | 静态资源服务 | 未来可扩展用于服务 CSS/JS，当前未启用 |
-| **serde_json::to_string** | JSON 序列化 | 用于搜索结果返回、调试日志输出 |
-
-### 组件交互关系
-
-```mermaid
-graph TD
-    %% ==================== 组件视图：Litho Book ====================
-    subgraph "主程序协调器"
-        MAIN[main]
-    end
-
-    subgraph "命令行解析域"
-        CLI[解析命令行参数]
-        VALID[参数校验]
-    end
-
-    subgraph "错误处理域"
-        ERR[错误处理]
-        ERR_LOG[记录错误]
-    end
-
-    subgraph "文件系统域"
-        FS[从路径创建文档树]
-        TREE[文档树]
-        SEARCH[搜索文档树]
-        RENDER[渲染标记文本]
-        SCAN[扫描目录]
-        FRONTMATTER[提取前置元数据]
-    end
-
-    subgraph "HTTP服务域"
-        ROUTER[创建路由]
-        APPSTATE[应用状态]
-        ROOT[根路由]
-        SEARCH_API[搜索API]
-        GET_FILE[获取文件]
-        RENDER_HTML[渲染HTML]
-        INJECT[注入模板]
-    end
-
-    %% ==================== 依赖关系 ====================
-    MAIN --> CLI
-    CLI --> VALID
-    VALID -->|失败| ERR
-    VALID -->|成功| FS
-    FS --> TREE
-    TREE --> APPSTATE
-    APPSTATE --> ROUTER
-    ROUTER --> ROOT
-    ROUTER --> SEARCH_API
-    ROUTER --> GET_FILE
-    ROOT --> TREE
-    SEARCH_API --> SEARCH
-    GET_FILE --> TREE
-    SEARCH --> RENDER
-    GET_FILE --> RENDER
-    RENDER --> RENDER_HTML
-    RENDER_HTML --> INJECT
-    INJECT -->|返回 HTML| APPSTATE
-    SEARCH_API -->|返回 JSON| APPSTATE
-    APPSTATE -->|返回响应| MAIN
-
-    ERR --> ERR_LOG
-    SEARCH -->|失败| ERR
-    RENDER -->|失败| ERR
-    INJECT -->|失败| ERR
-
-    style MAIN fill:#ddd,stroke:#333
-    style CLI fill:#f9f,stroke:#333
-    style VALID fill:#f9f,stroke:#333
-    style ERR fill:#fbb,stroke:#333
-    style ERR_LOG fill:#fbb,stroke:#333
-    style FS fill:#bbf,stroke:#333
-    style TREE fill:#bbf,stroke:#333
-    style SEARCH fill:#bbf,stroke:#333
-    style RENDER fill:#bbf,stroke:#333
-    style SCAN fill:#bbf,stroke:#333
-    style FRONTMATTER fill:#bbf,stroke:#333
-    style ROUTER fill:#bfb,stroke:#333
-    style APPSTATE fill:#bfb,stroke:#333
-    style ROOT fill:#bfb,stroke:#333
-    style SEARCH_API fill:#bfb,stroke:#333
-    style GET_FILE fill:#bfb,stroke:#333
-    style RENDER_HTML fill:#bfb,stroke:#333
-    style INJECT fill:#bfb,stroke:#333
-
-    classDef coreBusiness fill:#bbf,stroke:#333;
-    classDef infrastructure fill:#fbb,stroke:#333;
-    classDef tooling fill:#f9f,stroke:#333;
-    classDef external fill:#eee,stroke:#666;
-
-    class CLI,VALID tooling
-    class FS,TREE,SEARCH,RENDER,SCAN,FRONTMATTER coreBusiness
-    class ERR,ERR_LOG infrastructure
-    class ROUTER,APPSTATE,ROOT,SEARCH_API,GET_FILE,RENDER_HTML,INJECT coreBusiness
-    class MAIN tooling
+#### `async-stream` 组件
+用于实现 `/api/chat` 的流式响应：
+```rust
+let stream = async_stream::stream! {
+    yield Ok(Event::default().event("start").data(...));
+    while let Some(chunk) = response_stream.recv().await {
+        yield Ok(Event::default().event("content").data(...));
+    }
+    yield Ok(Event::default().event("finish").data(...));
+};
+Sse::new(stream)
 ```
 
-### 组件职责划分总结
+### 组件职责划分
+| 组件 | 职责 | 依赖 |
+|------|------|-------|
+| `Args` | 命令行参数接收与验证 | Clap |
+| `DocumentTree` | 文档结构建模与搜索 | std::fs, pulldown-cmark |
+| `AppState` | Web 服务状态共享 | DocumentTree |
+| `LithoBookError` | 错误统一抽象 | thiserror, axum::http::StatusCode |
+| `OpenAIRequest` | AI API 请求封装 | serde |
+| `StreamEvent` | SSE 事件格式定义 | serde |
 
-| 组件 | 职责边界 | 是否可替换 |
-|------|----------|------------|
-| **DocumentTree** | 唯一数据模型，承载所有文档结构与索引 | ❌ 不可替换，是系统核心 |
-| **CLI 解析器** | 参数输入接口 | ✅ 可替换为 `structopt` 或自定义解析 |
-| **HTTP 路由器** | 请求分发入口 | ✅ 可替换为 `actix-web`，但需重写中间件 |
-| **Markdown 渲染器** | `.md` → `.html` 转换 | ✅ 可替换为 `pulldown-cmark` 替换为 `comrak`，但需适配 API |
-| **错误枚举** | 统一错误契约 | ❌ 不可替换，是系统健壮性基石 |
-| **日志系统** | 可观测性 | ✅ 可替换为 `log` + `env_logger`，但失去结构化能力 |
+### 组件交互关系
+```mermaid
+classDiagram
+    direction LR
 
-> ✅ **设计原则**：**核心数据模型（DocumentTree）与错误契约（LithoBookError）不可替换**，其余组件可基于需求演进替换，但需保持接口兼容。
+    class Args {
+        +docs_dir: PathBuf
+        +port: u16
+        +host: String
+        +open: bool
+        +validate() Result~()
+        +server_url() String
+        +bind_address() String
+    }
+
+    class DocumentTree {
+        +root: FileNode
+        +file_map: HashMap~String,PathBuf~
+        +stats: TreeStats
+        +search_index: HashMap~String,Vec~String~~
+        +new(docs_dir) Result~Self~
+        +get_file_content(file_path) Result~String~
+        +render_markdown(content) String
+        +search_content(query) Vec~SearchResult~
+    }
+
+    class AppState {
+        +doc_tree: DocumentTree
+        +docs_path: String
+    }
+
+    class LithoBookError {
+        +Io(std::io::Error)
+        +Json(serde_json::Error)
+        +FileNotFound(String)
+        +InvalidPath(String)
+        +DirectoryScan(String)
+        +Server(String)
+        +Config(String)
+    }
+
+    class ChatRequest {
+        +message: String
+        +context: Option~String~
+        +history: Option~Vec~OpenAIMessage~~
+    }
+
+    class StreamEvent {
+        +event_type: String
+        +content: Option~String~
+        +suggestions: Option~Vec~String~~
+        +finished: bool
+    }
+
+    Args --> DocumentTree : 创建时传入路径
+    DocumentTree --> AppState : 注入状态
+    DocumentTree --> LithoBookError : 错误传播
+    ChatRequest --> StreamEvent : 生成响应事件
+    StreamEvent --> Sse : 构造 SSE 流
+```
 
 ---
 
 ## 5. 关键流程 (Key Processes)
 
-### 核心功能流程：文档服务启动与初始化
+### 核心功能流程
 
+#### 项目启动与服务初始化流程
 ```mermaid
-sequenceDiagram
-    participant User
-    participant CLI
-    participant ERR
-    participant FS
-    participant HTTP
-    participant Browser
-
-    User->>CLI: 执行 `litho-book /path/to/docs`
-    CLI->>CLI: 解析参数：路径、端口、是否打开浏览器
-    CLI->>ERR: 校验路径是否存在、端口是否合法
-    alt 参数无效
-        ERR-->>CLI: 返回 LithoBookError::InvalidPath
-        CLI->>User: 输出错误信息，退出
-    else 参数有效
-        CLI->>FS: 传递路径 /path/to/docs
-        FS->>FS: 使用 walkdir 递归扫描 .md 文件
-        FS->>FS: 提取 frontmatter，构建 FileNode 树
-        FS->>FS: 构建倒排索引：关键词 → 文件ID列表
-        FS->>FS: 构建文件ID → FileInfo 映射（路径、大小、修改时间）
-        FS-->>HTTP: 返回 Arc<DocumentTree>
-        HTTP->>HTTP: 创建 Axum Router，绑定 AppState{tree}
-        HTTP->>HTTP: 绑定 TCP 监听器 (localhost:8080)
-        HTTP-->>CLI: 服务启动成功，监听端口
-        CLI->>Browser: 自动打开 http://localhost:8080 （若 --open）
-        Browser->>HTTP: GET /
-        HTTP->>HTTP: 调用 DocumentTree::root() 获取树结构
-        HTTP->>HTTP: 调用 serde_json::to_string() 序列化树为 JSON
-        HTTP->>HTTP: 注入 HTML 模板，生成完整页面
-        HTTP-->>Browser: 返回 200 OK + HTML
-    end
+graph TD
+    A[用户执行命令行启动] --> B[解析命令行参数]
+    B --> C[初始化日志系统]
+    C --> D[构建文档树]
+    D --> E[创建 HTTP 服务器]
+    E --> F[启动 HTTP 服务]
+    F --> G[自动打开浏览器]
 ```
 
-### 核心功能流程：文档浏览与搜索
+**详细步骤**：
+1. 用户执行 `litho-book --path ./docs --port 3000`
+2. `cli.rs` 解析参数并验证路径合法性
+3. `main.rs` 初始化 Tracing 日志系统
+4. 调用 `filesystem::DocumentTree::new()` 扫描目录
+5. 构建完成后创建 `AppState` 并绑定到 Axum 路由器
+6. 启动 TCP 监听器，开始接受连接
+7. 若 `--open` 参数存在，则调用系统命令打开浏览器
 
+#### 文档全文搜索流程
 ```mermaid
-sequenceDiagram
-    participant Browser
-    participant HTTP
-    participant FS
-
-    Browser->>HTTP: GET /search?q=并发
-    HTTP->>FS: tree.search("并发")
-    FS->>FS: 遍历所有文件名、标题、内容
-    FS->>FS: 使用 str::contains() 匹配关键词
-    FS->>FS: 计算相关性评分：关键词频次 × 位置权重（标题>文件名>内容）
-    FS->>FS: 排序前100条结果，提取上下文片段（前后50字符）
-    FS-->>HTTP: 返回 Vec<SearchResult> { id, path, title, snippets, score }
-    HTTP->>HTTP: 使用 serde_json::to_string() 序列化为 JSON
-    HTTP-->>Browser: 返回 200 OK + { results: [...] }
-
-    alt 请求 /file/docs/intro.md
-        Browser->>HTTP: GET /file/docs/intro.md
-        HTTP->>FS: tree.find_by_path("/docs/intro.md")
-        FS-->>HTTP: 返回 FileInfo
-        HTTP->>HTTP: 读取文件内容，调用 render_markdown_to_html()
-        HTTP->>HTTP: 注入模板，生成 HTML
-        HTTP-->>Browser: 返回 200 OK + HTML
-    end
+graph TD
+    A[用户输入搜索关键词] --> B[接收搜索请求]
+    B --> C[执行全文检索]
+    C --> D[排序并高亮结果]
+    D --> E[返回搜索结果]
 ```
 
-### 技术处理流程：错误处理链路
+**技术路径**：
+1. 前端发送 `GET /api/search?q=性能优化`
+2. `search_handler` 提取查询参数
+3. 调用 `doc_tree.search_content("性能优化")`
+4. 遍历 `search_index`，逐行检查是否包含关键词
+5. 计算相关性评分（标题加权、精确匹配等）
+6. 对结果按分数降序排列，截断至最多 50 条
+7. 添加 `<mark>` 高亮标签后返回 JSON
 
+#### AI 助手流式对话流程
 ```mermaid
-sequenceDiagram
-    participant FS
-    participant ERR
-    participant HTTP
-    participant Browser
-
-    FS->>FS: 尝试读取文件 /docs/missing.md
-    alt 文件不存在
-        FS->>ERR: 返回 LithoBookError::Io(std::io::Error)
-        ERR->>ERR: 包装为 LithoBookError::Io
-        ERR->>ERR: 转换为 StatusCode::NOT_FOUND (404)
-        ERR-->>HTTP: 返回 Err(LithoBookError::Io)
-        HTTP->>HTTP: 调用 impl From<LithoBookError> for StatusCode
-        HTTP-->>Browser: 返回 404 Not Found + 错误信息
-    else 文件读取失败（权限）
-        FS->>ERR: 返回 LithoBookError::Io(PermissionDenied)
-        ERR->>ERR: 转换为 StatusCode::FORBIDDEN (403)
-        ERR-->>HTTP: 返回 Err(...)
-        HTTP-->>Browser: 返回 403 Forbidden
-    end
+graph TD
+    A[用户提交问题] --> B[接收聊天请求]
+    B --> C[构建 AI 请求内容]
+    C --> D[调用 AI API]
+    D --> E[流式返回响应]
 ```
+
+**执行细节**：
+1. 前端 POST `{message: "如何使用？", context: "..."}`
+2. `chat_stream_handler` 启动异步流
+3. 构造包含系统提示、上下文、历史会话的 OpenAI 请求
+4. 使用 `reqwest` 发起流式 POST 请求到智谱AI
+5. 在后台任务中解析 SSE 字节流，提取 `delta.content`
+6. 通过 `tokio::sync::mpsc::channel` 将内容推送到前端
+7. 最终生成推荐追问问题并发送完成事件
 
 ### 异常处理机制
+系统建立了完善的错误处理链条：
 
-| 异常类型 | 触发场景 | 处理方式 | 用户可见结果 |
-|----------|----------|----------|--------------|
-| `InvalidPath` | 指定目录不存在 | CLI 校验阶段 | `Error: Directory '/xxx' does not exist` |
-| `PortInUse` | 端口被占用 | CLI 校验阶段 | `Error: Port 8080 is already in use` |
-| `IoError` | 文件读取失败 | FS 层捕获 | `404 Not Found` 或 `403 Forbidden` |
-| `JsonError` | 序列化失败 | HTTP 层捕获 | `500 Internal Server Error` + 日志 |
-| `ParseError` | frontmatter 解析失败 | FS 层跳过文件 | 日志：`Warning: Failed to parse frontmatter in docs/a.md` |
-| `RegexError` | 搜索正则编译失败 | FS 层捕获 | `500 Internal Server Error` |
+```mermaid
+graph TB
+    A[IO错误] --> B[文件系统模块]
+    B --> C[转换为LithoBook错误Io类型]
+    C --> D[错误处理模块]
+    D --> E[实现From到StatusCode的转换]
+    E --> F[返回Axum HTTP响应]
 
-> ✅ **设计亮点**：
-> - **所有错误最终映射为 HTTP 状态码**，前端可统一处理。
-> - **非致命错误（如 frontmatter 解析失败）仅记录日志，不中断服务**，提升鲁棒性。
-> - **错误信息包含上下文**（如文件路径），便于调试。
+    G[JSON解析错误] --> H[服务器模块]
+    H --> I[转换为LithoBook错误Json类型]
+    I --> D
+
+    J[文件未找到] --> K[读取文件内容函数]
+    K --> L[转换为LithoBook错误FileNotFound类型]
+    L --> D
+```
+
+**错误映射规则**：
+| 应用错误 | HTTP 状态码 |
+|---------|------------|
+| `FileNotFound` | 404 Not Found |
+| `InvalidPath` | 400 Bad Request |
+| `Io`, `Json`, `DirectoryScan` | 500 Internal Server Error |
+| `Config` | 400 Bad Request |
 
 ---
 
@@ -509,223 +460,178 @@ sequenceDiagram
 
 ### 核心模块实现
 
-#### 1. `DocumentTree` 数据结构设计
-
+#### 文档树构建算法
 ```rust
-#[derive(Serialize, Deserialize)]
-pub struct DocumentTree {
-    pub root: FileNode, // 根节点
-    pub files: HashMap<FileId, FileInfo>, // ID → 文件元数据
-    pub index: HashMap<String, Vec<FileId>>, // 关键词 → 文件ID列表
-}
+fn build_tree(
+    current_path: &Path,
+    base_path: &Path,
+    file_map: &mut HashMap<String, PathBuf>,
+    search_index: &mut HashMap<String, Vec<String>>,
+    stats: &mut TreeStats,
+) -> anyhow::Result<FileNode>
+```
+- **递归策略**：深度优先遍历目录结构
+- **排序规则**：目录优先于文件，同类型按名称升序（忽略大小写）
+- **过滤条件**：
+  - 跳过以 `.` 开头的隐藏文件
+  - 仅索引 `.md` 后缀的文件
+- **性能优化**：预分配向量容量，减少内存重新分配
 
-#[derive(Serialize, Deserialize)]
+#### 全文搜索算法
+```rust
+pub fn search_content(&self, query: &str) -> Vec<SearchResult>
+```
+**评分模型**：
+```text
+relevance_score = Σ(line_score)
+where:
+  line_score = base_score × modifiers
+
+modifiers:
+  - 标题行 (以 # 开头): ×3
+  - 精确单词匹配: ×2
+  - 行首匹配: ×1.5
+  - 文件名匹配: +2 分
+```
+
+**高亮实现**：
+```rust
+fn highlight_matches(&self, content: &str, query: &str) -> String {
+    // 不区分大小写的子串替换
+    let start = content_lower.find(&query_lower)?;
+    format!(\"{}<mark>{}</mark>{}\", before, matched, after)
+}
+```
+
+#### 流式 AI 对话实现
+采用 `async-stream` + `tokio::sync::mpsc` 模式：
+```rust
+let (tx, rx) = tokio::sync::mpsc::channel(100);
+tokio::spawn(async move {
+    let mut stream = response.bytes_stream();
+    while let Some(chunk) = stream.next().await {
+        if let Ok(data) = parse_sse_chunk(&chunk) {
+            tx.send(Ok(content)).await.ok();
+        }
+    }
+});
+Sse::new(async_stream::stream! {
+    while let Some(result) = rx.recv().await {
+        yield Ok(Event::default().data(result.unwrap()));
+    }
+})
+```
+
+### 数据结构设计
+#### `FileNode` —— 文件树节点
+```rust
 pub struct FileNode {
     pub name: String,
+    pub path: String,
+    pub is_file: bool,
     pub children: Vec<FileNode>,
-    pub file_id: Option<FileId>, // 若为文件，指向 files 中的 ID
-}
-
-#[derive(Serialize, Deserialize, Hash, Eq, PartialEq, Clone)]
-pub struct FileId(usize); // 简单整数 ID，避免字符串开销
-
-#[derive(Serialize, Deserialize)]
-pub struct FileInfo {
-    pub path: PathBuf,
-    pub size: u64,
-    pub modified: SystemTime,
-    pub title: Option<String>, // 来自 frontmatter
-    pub content: String, // 仅用于搜索，不用于渲染
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub size: Option<u64>,
+    #[serde(skip_serializing_if = "Option::is_none")]
+    pub modified: Option<String>,
 }
 ```
+- **序列化优化**：文件夹不序列化 `size` 和 `modified`
+- **路径标准化**：Windows 下 `\` 替换为 `/`
 
-> ✅ **设计优势**：
-> - `FileId` 使用 `usize` 而非 `String`，节省内存，提升哈希性能。
-> - `content` 字段仅用于搜索，渲染时从磁盘重新读取，避免内存膨胀。
-> - `Serialize/Deserialize` 支持调试时导出树结构（`--dump-tree`）。
-
-#### 2. 全文搜索算法设计
-
+#### `SearchResult` —— 搜索结果
 ```rust
-impl DocumentTree {
-    pub fn search(&self, query: &str) -> Vec<SearchResult> {
-        let query_lower = query.to_lowercase();
-        let mut results = Vec::new();
-
-        for (file_id, file_info) in &self.files {
-            let score = compute_relevance_score(
-                &query_lower,
-                &file_info.path.to_string_lossy(),
-                &file_info.title.as_deref().unwrap_or(""),
-                &file_info.content,
-            );
-
-            if score > 0.0 {
-                let snippets = extract_context(&file_info.content, &query_lower, 50);
-                results.push(SearchResult {
-                    id: *file_id,
-                    path: file_info.path.clone(),
-                    title: file_info.title.clone(),
-                    snippets,
-                    score,
-                });
-            }
-        }
-
-        results.sort_by(|a, b| b.score.partial_cmp(&a.score).unwrap());
-        results.truncate(100); // 限制返回数量
-        results
-    }
-}
-
-fn compute_relevance_score(query: &str, path: &str, title: &str, content: &str) -> f64 {
-    let mut score = 0.0;
-
-    // 标题匹配权重最高
-    if title.contains(query) { score += 10.0; }
-    // 文件名匹配
-    if path.contains(query) { score += 5.0; }
-    // 内容匹配，每出现一次 +0.5
-    let count = content.matches(query).count();
-    score += count as f64 * 0.5;
-
-    // 精确匹配加权
-    if path == query || title == query { score *= 2.0; }
-
-    score
+pub struct SearchResult {
+    pub file_path: String,
+    pub file_name: String,
+    pub title: Option<String>, // 从第一个 # 标题提取
+    pub matches: Vec<SearchMatch>,
+    pub relevance_score: f32,
 }
 ```
 
-> ✅ **算法洞察**：
-> - **无倒排索引优化**：因数据量小（<10K 文件），线性扫描足够快（<50ms）。
-> - **无停用词过滤**：避免复杂词典，适合技术术语搜索。
-> - **无分词器**：使用 `str::contains()`，支持中英文混合，无需语言模型。
-> - **无 BM25**：避免依赖 `tantivy` 等重量级库，保持轻量。
-
-#### 3. 性能优化策略
-
+### 性能优化策略
 | 优化点 | 实现方式 | 效果 |
-|--------|----------|------|
-| **内存共享** | `Arc<DocumentTree>` | 避免多次拷贝，支持高并发请求 |
-| **延迟加载内容** | `FileInfo.content` 仅在搜索时读取 | 启动时只读取文件名与 frontmatter，减少 I/O |
-| **搜索结果限流** | 最多返回 100 条 | 防止大结果集拖慢前端 |
-| **异步 HTTP 服务** | `axum` + `tokio` | 支持 100+ 并发请求，无阻塞 |
-| **无模板引擎** | 手动注入 HTML + JSON | 避免 `handlebars`、`tera` 等依赖，减少二进制体积 |
-| **静态资源内联** | CSS/JS 内置于二进制 | 无需额外文件，单文件交付 |
-
-> 🚀 **实测性能**（1000 个 `.md` 文件，平均大小 5KB）：
-> - 启动时间：**800ms**（含扫描与索引）
-> - 搜索响应：**<10ms**
-> - 内存占用：**~45MB**
-> - 并发支持：**>500 RPS**（单核）
-
-### 数据结构设计总结
-
-| 数据结构 | 用途 | 时间复杂度 | 空间复杂度 |
-|----------|------|-------------|-------------|
-| `HashMap<String, Vec<FileId>>` | 倒排索引 | O(1) 查询 | O(K×N)，K=关键词数，N=文件数 |
-| `HashMap<FileId, FileInfo>` | 文件元数据 | O(1) 查找 | O(N) |
-| `Vec<FileNode>` | 树结构 | O(D) 遍历（D=深度） | O(N) |
-| `Arc<DocumentTree>` | 共享引用 | O(1) 克隆 | O(1) 引用计数开销 |
-
-> ✅ **设计哲学**：**用空间换时间，用内存换延迟**，在个人知识库场景下，内存成本远低于用户等待成本。
+|-------|---------|------|
+| **内存索引** | 启动时加载所有 `.md` 文件内容 | 避免重复磁盘读取 |
+| **搜索加速** | 预分割每行文本到 `search_index` | 减少字符串扫描开销 |
+| **并发处理** | Tokio 异步运行时 | 高并发下保持低延迟 |
+| **流式传输** | SSE 分块返回 AI 响应 | 用户无需等待完整回复 |
+| **日志控制** | `--verbose` 控制日志级别 | 生产环境减少 I/O 影响 |
 
 ---
 
 ## 7. 部署架构 (Deployment Architecture)
 
 ### 运行环境要求
-
 | 项目 | 要求 |
 |------|------|
-| **操作系统** | Windows 10+ / macOS 10.15+ / Linux (x86_64, aarch64) |
-| **CPU** | 任意现代单核（1.5GHz+） |
-| **内存** | ≥128MB（推荐 ≥512MB，适用于 >500 文件） |
-| **磁盘** | 仅需存储 `.md` 文件，无额外空间需求 |
-| **网络** | 无需外网，仅需本地回环（127.0.0.1） |
-| **依赖** | 无外部依赖，单二进制文件 |
-
-> ✅ **交付形式**：`litho-book` 为静态编译的单文件二进制，支持 `cargo install litho-book` 或直接下载 `.zip`。
+| **操作系统** | Windows, macOS, Linux |
+| **Rust 版本** | 2024 edition |
+| **最低权限** | 读取文档目录权限；若绑定 <1024 端口需管理员权限 |
+| **网络** | 本地回环接口（默认 `127.0.0.1`） |
+| **依赖** | 无外部依赖（静态编译） |
 
 ### 部署拓扑结构
-
 ```mermaid
-graph LR
-    A[用户设备] --> B[本地文件系统]
-    B --> C[litho-book 二进制]
-    C --> D[内存：DocumentTree]
-    C --> E[HTTP 服务：localhost:8080]
-    A --> E
+graph TD
+    Client[客户端浏览器] -->|HTTP| Server[(Litho Book 服务)]
+    Server -->|读取| Docs[(本地文档目录)]
+    Server -->|HTTPS| ZhipuAI[ZhipuAI API]
 
-    style A fill:#fff,stroke:#333
-    style B fill:#f9f,stroke:#333
-    style C fill:#bfb,stroke:#333
-    style D fill:#bbf,stroke:#333
-    style E fill:#bfb,stroke:#333
-
-    classDef user fill:#fff,stroke:#333;
-    classDef data fill:#f9f,stroke:#333;
-    classDef app fill:#bfb,stroke:#333;
-    classDef memory fill:#bbf,stroke:#333;
-
-    class A user
-    class B data
-    class C app
-    class D memory
-    class E app
+    style Server fill:#4CAF50,stroke:#388E3C,color:white
+    style Docs fill:#FFC107,stroke:#FFA000
+    style ZhipuAI fill:#3F51B5,stroke:#303F9F,color:white
 ```
 
-> 📌 **部署模式**：**单机单进程**，无集群、无负载均衡、无容器化必要。
+**典型部署方式**：
+```bash
+# 本地开发模式
+litho-book --path ./docs --port 3000 --open
+
+# 服务器模式（允许远程访问）
+litho-book --path /var/docs --host 0.0.0.0 --port 8080
+```
 
 ### 扩展性设计
+#### 当前扩展点
+- ✅ **模块拆分**：可通过 `mod` 关键字将功能拆分为独立 crate
+- ✅ **配置扩展**：现有 CLI 参数体系易于添加新选项
+- ✅ **API 扩展**：Axum 路由器支持动态注册新路由
+- ✅ **AI 适配**：AI 调用封装良好，可替换为其他 LLM 服务
 
-| 扩展维度 | 当前设计 | 扩展策略 |
-|----------|----------|----------|
-| **功能扩展** | 无插件机制 | 可通过 CLI 参数扩展（如 `--dump-tree`、`--port`） |
-| **性能扩展** | 单线程 HTTP | 可启用 `tokio::runtime::Builder::multi_thread()` 支持多核 |
-| **数据规模扩展** | 内存索引 | 支持 >10K 文件，>10GB 文档库（需测试） |
-| **部署扩展** | 单机 | 可通过 Docker 镜像封装，便于 CI/CD 集成 |
-| **协议扩展** | HTTP | 可增加 gRPC 接口供 CLI 工具调用（未来） |
-
-> ✅ **扩展性原则**：**不主动扩展，但预留扩展点**。例如：
-> - `AppState` 可扩展为 `AppState { tree, config, metrics }`
-> - `DocumentTree` 可实现 `trait Indexable`，支持未来替换为 `tantivy` 索引
+#### 改进建议
+1. **配置文件支持**
+   ```toml
+   # litho-book.toml
+   docs_dir = "./docs"
+   port = 3000
+   host = "127.0.0.1"
+   open_browser = true
+   ```
+2. **环境变量注入**
+   ```bash
+   export ZHIPUAI_API_KEY=your_key_here
+   ```
+3. **缓存机制**
+   - LRU Cache 缓存频繁访问的渲染结果
+   - Redis 缓存 AI 对话历史
+4. **热重载**
+   - 使用 `notify` 库监听文件变化
+   - 动态更新 `DocumentTree` 而无需重启
 
 ### 监控与运维
+#### 内建监控能力
+- **健康检查**：`GET /health` 返回服务状态与版本
+- **统计接口**：`GET /api/stats` 提供文档数量、总大小等指标
+- **结构化日志**：Tracing 输出可被 ELK/Sentry 等系统采集
 
-| 维度 | 实现方式 | 建议 |
-|------|----------|------|
-| **日志** | `tracing` 输出到 stderr | 生产环境可重定向到文件：`litho-book docs/ > log.txt` |
-| **健康检查** | `/health` 路由（待实现） | 返回 `{ status: "ok", docs_count: 123 }` |
-| **指标暴露** | 无 Prometheus | 可添加 `/metrics` 返回 `counter`（请求量、搜索量） |
-| **崩溃恢复** | 无自动重启 | 依赖用户手动重启，符合“工具”定位 |
-| **升级** | 重新下载二进制 | 通过 `cargo install --force` 或 GitHub Releases |
-| **调试** | `--dump-tree` 输出 JSON | 用于分析索引结构，排查搜索失效问题 |
-
-> ✅ **运维哲学**：**不运维，只使用**。系统设计目标是“**启动即用，关闭即忘**”，无需监控、无需告警、无需日志分析。
-
----
-
-## ✅ 架构洞察总结
-
-| 维度 | 洞察 |
+#### 运维建议
+| 场景 | 建议 |
 |------|------|
-| **架构哲学** | **“工具化”胜于“平台化”**：不追求功能全面，而追求“**一次启动，终身使用**”的极致体验。 |
-| **技术选型** | **Rust 生态的完美实践**：`axum` + `tokio` + `thiserror` + `serde` 构成“黄金组合”，安全、高效、可维护。 |
-| **性能瓶颈** | **启动时的文件扫描**是唯一性能瓶颈，可通过缓存索引（如 `.litho-index`）优化，但违背“无状态”原则，需权衡。 |
-| **安全性** | **无网络暴露**，仅监听 `localhost`，无认证，无文件写入，**天然安全**。 |
-| **可维护性** | 模块清晰、错误统一、无依赖地狱，**新开发者可在 1 小时内理解全系统**。 |
-| **知识传承** | **单文件交付 + 清晰架构文档**，使项目成为“**可传承的工具典范**”。 |
+| **生产部署** | 使用 systemd/pm2 管理进程生命周期 |
+| **日志分析** | 重定向日志到文件或集中式日志系统 |
+| **安全性** | 避免绑定 `0.0.0.0` 至公网，或添加身份验证中间件 |
+| **备份策略** | 定期备份原始 Markdown 文档目录 |
 
-> 💡 **给开发者的建议**：
-> - **不要添加数据库**：会破坏“零配置”灵魂。
-> - **不要添加用户系统**：会引入认证复杂性。
-> - **不要添加插件**：会分裂生态。
-> - **保持单二进制**：这是它的力量。
-
----
-
-> **Litho Book 不是一个“系统”，而是一个“瞬间”** ——
-> 你敲下命令，知识就在眼前。
-> 无需等待，无需配置，无需思考。
-> 这，就是极简架构的终极胜利。
+> 📌 **最佳实践**：将 `litho-book` 作为开发文档的标准查看工具集成到 CI/CD 流程中，每次构建后自动生成并预览文档站点。
