--- a/docs/4、深入探索/用户交互域.md
+++ b/docs/4、深入探索/用户交互域.md
@@ -304,7 +304,7 @@ async fn call_openai_stream_api(
     
     let response = client
         .post("https://open.bigmodel.cn/api/paas/v4/chat/completions")
-        .header("Authorization", "Bearer b0c0afc3b5d0402db47e5132fc0fa882.6vyDm2pOv2NSy5z7")
+        .header("Authorization", "Bearer your-llm-key")
         .json(&request_body)
         .send()
         .await?;
